added first migration to mongodb

--- a/postcodesquery/src/main/resources/application.properties
+++ b/postcodesquery/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=postcodes-query-service
 server.port=8000
 
-debug=true
+#debug=true
 
 spring.batch.job.enabled=false
 
 postcodes.base.uri=http://api.postcodes.io/postcodes
 #postcodes.base.uri=http://localhost:8000/postcodes
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=postcodesquery
